Add functionality for a simple es query
